tests/NormalTests/paczka1/fuzzy1/16389434.err
Error in line 6: MAQQAOM A673 46,4
Error in line 10: 7i62bzAEnMB A673 73,1
Error in line 22: hWSZ5h A18 19,06
Error in line 17: hWSZ5h A101 91,4
Error in line 26: kxnU0NRdL S698 57,2
Error in line 29: kxnU0NRdL A101 38,0
Error in line 30: kxnU0NRdL S698 74,7
Error in line 23: hWSZ5h A18 25,1
Error in line 31: kxnU0NRdL A18 55,2
Error in line 32: hWSZ5h S698 81,1
Error in line 36: hfljGlp A673 94,6
